--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -3,6 +3,6 @@ body, html { height: 100%; }
 
 canvas#babble {
   background-color: rgb(7, 25, 36);
-  width: 100%;
-  height: 100%;
+  width: 408px;
+  height: 374px;
 }
